--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0;url=index.php">
-    <title>Redireccionando a index.php...</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Visualizar PDF</title>
 </head>
 <body>
-    <p>Redireccionando a <a href="index.php">index.php</a>...</p>
+    <h1>Visualización de PDF</h1>
+    
+    <embed src="Tripticop.pdf" type="application/pdf" width="100%" height="600px" />
 </body>
 </html>
